--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "iview": "^2.0.0-rc.9",
     "vue": "^2.2.1"
   },
   "devDependencies": {
@@ -20,6 +19,7 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "less-loader": "^4.0.3",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.16.1",
@@ -28,6 +28,8 @@
     "vue-router": "^2.3.1",
     "vue-template-compiler": "^2.2.1",
     "vuex": "^2.2.1",
+    "vux": "^2.2.1-rc.5",
+    "vux-loader": "^1.0.57",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
   }
