--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-latest": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
     "less-loader": "^4.0.3",
     "node-sass": "^4.5.0",
