--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vue": "^2.2.1"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
+    "autoprefixer-loader": "^3.2.0",
     "axios": "^0.16.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
